--- a/z_review/0_Mar12.md
+++ b/z_review/0_Mar12.md
@@ -2,3 +2,54 @@ Q - why do we need map(int, input().split())
 ----------------------------------------------
 A - 默认input 输入的是string，split以后是list of string 。
 而map  把 list 里面每个数都变成了 int
+
+都是 list 
+map(int, input().split()) 是 int list [1 2 3 4] 
+input().split() 是 string list [“1”，“2”，“3”，“4”]
+
+e.x. map(float, input().split())
+int list 用法： list_int[0] == 123
+string 用法： list_int[0] == "123"
+
+>>> "123" > "32"
+False
+>>> 123 > 32
+True
+譬如你后面需要比较大小，加减乘除了，就要确保输入就 map 成 int 或者 float
+
+
+zip() method
+----------------------------------------------
+这是bloomberg原题啊。。。。
+要求把 string 1 "abcdefg"
+和 string 2 "123456789999"
+一一merge然后打印在一起，
+
+用 zip 这个方法，是最好的。不用一个一个for loop了。
+>>> s = []
+>>> for x, y in zip("abcdefg", "123456789999"):
+...     s.append(x)
+...     s.append(y)
+...
+>>> print("".join(s))
+a1b2c3d4e5f6g7
+
+－ other sample － 
+>>> a = [1, 2, 3, 4]
+>>> b = ["b0", 92, "b2", 93]
+>>> a
+[1, 2, 3, 4]
+>>> b
+['b0', 92, 'b2', 93]
+>>> zip(a, b)
+<zip object at 0x000001F54DFD7698>
+新知识：zip，和map很像，但是 zip 另一种常用de方法，
+用于把 zip(arg1, arg2) 里面的两个arg一一对应的 pair 起来
+
+>>> for x, y in zip(a, b):
+...     print(x ,y)
+...
+1 b0
+2 92
+3 b2
+4 93
