--- a/z_review/0_Mar12.md
+++ b/z_review/0_Mar12.md
@@ -26,6 +26,7 @@ zip() method
 一一merge然后打印在一起，
 
 用 zip 这个方法，是最好的。不用一个一个for loop了。
+"""python
 >>> s = []
 >>> for x, y in zip("abcdefg", "123456789999"):
 ...     s.append(x)
@@ -33,7 +34,7 @@ zip() method
 ...
 >>> print("".join(s))
 a1b2c3d4e5f6g7
-
+"""
 － other sample － 
 >>> a = [1, 2, 3, 4]
 >>> b = ["b0", 92, "b2", 93]
