--- a/z_review/0_Mar12.md
+++ b/z_review/0_Mar12.md
@@ -26,7 +26,8 @@ zip() method
 一一merge然后打印在一起，
 
 用 zip 这个方法，是最好的。不用一个一个for loop了。
-"""python
+
+'''python
 >>> s = []
 >>> for x, y in zip("abcdefg", "123456789999"):
 ...     s.append(x)
@@ -34,8 +35,10 @@ zip() method
 ...
 >>> print("".join(s))
 a1b2c3d4e5f6g7
-"""
+'''
+
 － other sample － 
+'''python
 >>> a = [1, 2, 3, 4]
 >>> b = ["b0", 92, "b2", 93]
 >>> a
@@ -43,18 +46,16 @@ a1b2c3d4e5f6g7
 >>> b
 ['b0', 92, 'b2', 93]
 >>> zip(a, b)
+'''
 <zip object at 0x000001F54DFD7698>
 新知识：zip，和map很像，但是 zip 另一种常用de方法，
 用于把 zip(arg1, arg2) 里面的两个arg一一对应的 pair 起来
-
+'''python
 >>> for x, y in zip(a, b):
 ...     print(x ,y)
 ...
-
 1 b0
-
 2 92
-
 3 b2
-
 4 93
+'''
