--- a/z_review/0_Mar12.md
+++ b/z_review/0_Mar12.md
@@ -55,8 +55,24 @@ a1b2c3d4e5f6g7
 
 <zip object at 0x000001F54DFD7698>
 ```
+
+
 新知识：zip，和map很像，但是 zip 另一种常用de方法，
 用于把 zip(arg1, arg2) 里面的两个arg一一对应的 pair 起来
+```
+<zip object at 0x000001F54DFD7698>
+等于告诉你，zip(a,b)成功啦，你把 a 和 b 打包成了[a0 b0 a1 b1 a2 b2]的一个list，但是不方便显示出来。给你看看他们的位置吧～
+诺：快来看他们在计算机里的位置：<zip object at 0x000001F54DFD7698>
+就好比，你看到你的文件word啦pdf啦，存贮在c盘d盘一样
+这个不要慌，讲清楚这个，得上一节操作系统课。。。。
+0x000001F54DFD7698 这是python的计算方式，
+从0x000000 开始，
+你建立了一个varibal啦 object啦，甚至function啦，
+其实就是defined申请了一些内存来存你的这些variable东西，
+也就是说每个操作都占了一点空间，
+而你建立 zip 这个object，正好内存占到了0x000001998989787698这里，
+转换为人话，就好比内存占用到了： 4.8mb/100mb的位置。这就是这个 zip 他的location
+```
 
 ```python
 >>> for x, y in zip(a, b):
